CustomSession
Prise en compte de la session